feat: implement working prototype docs: fill basic README.md sections chore: update .gitignore for MacOS chore: write basic usage examples chore: add a few text files to read

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@
 /doc/
 /pkg/
 /vendor/cache/*.gem
+
+#********** osx template********** 
+
+.DS_Store
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+ 
