--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ before_install:
   - gem update bundler
 language: ruby
 osx_image: xcode8.2
+script:
+  - bundle exec rake test
 rvm:
   - 2.0
   - 2.1
