test: implement a basic say fake for testing purposes test: reconfigure TravisCI back to unix docs: add some dev notes as a self-reminder feat: implement ENV var say_path substitution

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@
 before_install:
   - gem update bundler
 language: ruby
-os: osx
 script:
   - bundle exec rake test
+env:
+  - USE_FAKE_SAY=./test/fake/say
 rvm:
   - 2.0
   - 2.1
