--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,24 @@
 .Spotlight-V100
 .Trashes
 
+
+#********** ruby template**********
+
+*.gem
+*.rbc
+.bundle
+.config
+coverage
+InstalledFiles
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+
+# YARD artifacts
+.yardoc
+_yardoc
+doc/
